--- a/Frontend/easybank/src/app/components/footer/footer.component.html
+++ b/Frontend/easybank/src/app/components/footer/footer.component.html
@@ -1,39 +1,41 @@
 <!--========== FOOTER ==========-->
 <footer class="footer section">
-    <div class="footer__container bd-grid bd-container container">
-        <div class="footer__content">
-            <a href="#" class="footer__logo">Easy Bank Inc.</a>
-            <span class="footer__description">Online Banking Made Easy</span>
-            <div>
-                <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
-                <a href="#" class="footer__social"><i class='bx bxl-instagram'></i></a>
-                <a href="#" class="footer__social"><i class='bx bxl-twitter'></i></a>
-            </div>
-        </div>
-
-        <div class="footer__content">
-            <h3 class="footer__title">Information</h3>
-            <ul>
-                <li><a routerLink='/home' class="footer__link">Home</a></li>
-                <li><a routerLink='/home' class="footer__link">Services</a></li>
-                <li><a routerLink='/listings' class="footer__link">Features</a></li>
-                <li><a routerLink='/login' class="footer__link">Sign In</a></li>
-                <!-- <li><a href="#" class="footer__link">Terms of services</a></li> -->
-            </ul>
-        </div>
-
-        <div class="footer__content">
-            <h3 class="footer__title">Contact</h3>
-            <ul>
-                <li class="footer-contact"><i class="fas fa-map-marker-alt"></i> Aberdeen, Scotland</li>
-                <li class="footer-contact"><i class="fas fa-envelope"></i> Contact@EasyBank.co.uk</li>
-                <li class="footer-contact"><i class="fas fa-phone"></i> Customer Help +44 123456789</li>
-
-                
-
-            </ul>
-        </div>
+  <div class="footer__container bd-grid bd-container container">
+    <div class="footer__content">
+      <a href="#" class="footer__logo">Easy Bank Inc.</a>
+      <span class="footer__description">Online Banking Made Easy</span>
+      <div>
+        <a href="#" class="footer__social"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="footer__social"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="footer__social"><i class="bx bxl-twitter"></i></a>
+      </div>
     </div>
 
-    <p class="footer__copy">&#169; 2021 EasyBank. All Rights Reserved.</p>
+    <div class="footer__content">
+      <h3 class="footer__title">Information</h3>
+      <ul>
+        <li><a routerLink="/home" class="footer__link">Home</a></li>
+        <li><a routerLink="/home" class="footer__link">Services</a></li>
+        <li><a routerLink="/listings" class="footer__link">Features</a></li>
+        <li><a routerLink="/login" class="footer__link">Sign In</a></li>
+      </ul>
+    </div>
+
+    <div class="footer__content">
+      <h3 class="footer__title">Contact</h3>
+      <ul>
+        <li class="footer-contact">
+          <i class="fas fa-map-marker-alt"></i> Aberdeen, Scotland
+        </li>
+        <li class="footer-contact">
+          <i class="fas fa-envelope"></i> Contact@EasyBank.co.uk
+        </li>
+        <li class="footer-contact">
+          <i class="fas fa-phone"></i> Customer Help +44 123456789
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <p class="footer__copy">&#169; 2021 EasyBank. All Rights Reserved.</p>
 </footer>
