--- a/Frontend/easybank/src/app/components/home/home.component.html
+++ b/Frontend/easybank/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
-<header>
+  <header>
     <div class="container header">
       <nav>
         <ul class="nav-ul">
@@ -9,17 +9,17 @@
           <li class="cta"><a href="#action">Sign In</a></li>
         </ul>
 
+        <!-- Login Button -->
         <div class="login">
           <a href="#" class="btn" routerLink="/login">Sign In</a>
         </div>
       </nav>
     </div>
 
+    <!-- Landing Page Section -->
     <div class="container intro" data-aos="fade-up">
       <h1>EasyBank Online Banking</h1>
-      <p>
-          Online Banking Service Dashboard.
-      </p>
+      <p>Online Banking Service Dashboard.</p>
       <a href="#" routerLink="/register" class="btn">Create Account</a>
       <img src="../../../assets/img/mac.png" alt="" />
     </div>
@@ -36,7 +36,7 @@
         </div>
         <!-- services -->
         <div class="services" data-aos="fade-up">
-          <!-- service 1 -->
+          <!-- service-->
           <div class="service">
             <i class="fas fa-shield-alt"></i>
             <h3 class="heading-3">Secure Auth</h3>
@@ -45,43 +45,42 @@
             </p>
             <a href="" class="btn-simple">Learn More <span>&rarr;</span></a>
           </div>
-          <!-- service 1 -->
+          <!-- service-->
           <div class="service">
             <i class="far fa-chart-bar"></i>
             <h3 class="heading-3">Online Dashboard</h3>
             <p class="text-small">
-                One of UK's leading digital banking solutions.
-              </p>
+              One of UK's leading digital banking solutions.
+            </p>
             <a href="" class="btn-simple">Learn More <span>&rarr;</span></a>
           </div>
-          <!-- service 1 -->
+          <!-- service-->
           <div class="service">
             <i class="fas fa-user-shield"></i>
             <h3 class="heading-3">Express Sign In</h3>
             <p class="text-small">
-                One of UK's leading digital banking solutions.
-              </p>
+              One of UK's leading digital banking solutions.
+            </p>
             <a href="" class="btn-simple">Learn More <span>&rarr;</span></a>
           </div>
-          <!-- service 1 -->
+          <!-- service -->
           <div class="service">
             <i class="far fa-address-card"></i>
             <h3 class="heading-3">Secure Payments</h3>
             <p class="text-small">
-                One of UK's leading digital banking solutions.
-              </p>
+              One of UK's leading digital banking solutions.
+            </p>
             <a href="" class="btn-simple">Learn More <span>&rarr;</span></a>
           </div>
         </div>
       </div>
     </section>
 
+    <!-- Consult Section Design -->
     <section id="consult">
       <div class="container consult">
         <div class="consult-text" data-aos="fade-right">
-          <h2 class="heading-2">
-            Easily Manage Your Finances 
-          </h2>
+          <h2 class="heading-2">Easily Manage Your Finances</h2>
           <div class="consult-item">
             <i class="far fa-check-circle"></i>
             <p>One of UK's leading digital banking solutions.</p>
@@ -101,6 +100,7 @@
       </div>
     </section>
 
+    <!-- Features Section -->
     <section id="features">
       <div class="container features" data-aos="fade-up">
         <div class="feature-image">
@@ -112,33 +112,31 @@
               Mananage and Analyze your payments with our secure services
             </h2>
             <p class="text-white">
-                Our Digital Banking Solutions provides secure and managable preferences to suit all needs
+              Our Digital Banking Solutions provides secure and managable
+              preferences to suit all needs
             </p>
           </div>
           <div class="feature-items">
             <div class="feature-item">
-                <i class="far fa-address-card"></i>
+              <i class="far fa-address-card"></i>
               <h3 class="heading-3 text-white">Secure Payments</h3>
-              <p class="text-small text-white">
-                One of the world’s leading software design systems for
-                everyone.
-              </p>
+              <!-- <p class="text-small text-white">
+                One of the world’s leading Digital Banking Apps.
+              </p> -->
             </div>
             <div class="feature-item">
-                <i class="far fa-chart-bar"></i>
-              <h3 class="heading-3 text-white">Analysis</h3>
-              <p class="text-small text-white">
-                One of the world’s leading software design systems for
-                everyone.
-              </p>
+              <i class="far fa-chart-bar"></i>
+              <h3 class="heading-3 text-white">In-Depth Analysis</h3>
+              <!-- <p class="text-small text-white">
+                One of the world’s leading Digital Banking Apps.
+              </p> -->
             </div>
             <div class="feature-item">
-                <i class="fas fa-cogs"></i>
-              <h3 class="heading-3 text-white">Preferences</h3>
-              <p class="text-small text-white">
-                One of the world’s leading software design systems for
-                everyone.
-              </p>
+              <i class="fas fa-cogs"></i>
+              <h3 class="heading-3 text-white">User Preferences</h3>
+              <!-- <p class="text-small text-white">
+                One of the world’s leading Digital Banking Apps.
+              </p> -->
             </div>
           </div>
         </div>
@@ -150,10 +148,12 @@
         <div class="heading">
           <h2 class="heading-2">Why Wait ?</h2>
           <p>Get Started with our Digital Banking Dashboard.</p>
-          <a href="#" class="btn btn-square" routerLink="/register">Create Account</a>
+          <a href="#" class="btn btn-square" routerLink="/register"
+            >Create Account</a
+          >
         </div>
       </div>
     </section>
   </main>
-<app-footer></app-footer>
+  <app-footer></app-footer>
 </div>
