--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
@@ -1,154 +1,124 @@
 <div class="dashboard-container">
+  <input type="checkbox" id="sidebar-toggle" />
 
-<input type="checkbox" id="sidebar-toggle">
+  <app-sidebar></app-sidebar>
 
-<app-sidebar></app-sidebar>
+  <div class="dashboard-content">
+    <header>
+      <div class="search-container"></div>
 
-<div class="dashboard-content">
-  <header>
-    <div class="search-container">
-    </div>
+      <div class="icons">
+        <div></div>
+      </div>
+    </header>
 
-    <div class="icons">
-      <div></div>
-    </div>
-  </header>
-
-  <main>
-    <h2 class="title uppercase">Hello, {{user.username}} Welcome to Your Dashboard</h2>
-    <div class="cards-section">
-
+    <main>
+      <h2 class="title uppercase">
+        Hello, {{ user.username }} Welcome to Your Dashboard
+      </h2>
+      <div class="cards-section">
         <div class="card">
-            <div class="card-body">
-                <span><i class="fas fa-piggy-bank"></i></span>
-                <div>
-                    <h5>Account Balance</h5>
-                    <h4>£{{user.balance}}.00</h4>
-                </div>
+          <div class="card-body">
+            <span><i class="fas fa-piggy-bank"></i></span>
+            <div>
+              <h5>Account Balance</h5>
+              <h4>£{{ user.balance }}.00</h4>
             </div>
-            <div class="card-footer">
-                <a href="" routerLink="/dashboard/payments">View All</a>
-            </div>
+          </div>
+          <div class="card-footer">
+            <a href="" routerLink="/dashboard/payments">View All</a>
+          </div>
         </div>
 
         <div class="card">
-            <div class="card-body">
-                <span><i class="fas fa-sync-alt"></i></span>
-                <div>
-                    <h5>Payments Sent</h5>
-                    <h4>{{sent.length}}</h4>
-                </div>
+          <div class="card-body">
+            <span><i class="fas fa-sync-alt"></i></span>
+            <div>
+              <h5>Payments Sent</h5>
+              <h4>{{ sent.length }}</h4>
             </div>
-            <div class="card-footer">
-                <a href="" routerLink="/dashboard/payments">View All</a>
-            </div>
+          </div>
+          <div class="card-footer">
+            <a href="" routerLink="/dashboard/payments">View All</a>
+          </div>
         </div>
 
         <div class="card">
-            <div class="card-body">
-                <span><i class="fas fa-sync-alt"></i></span>
-                <div>
-                    <h5>Pending Payments</h5>
-                    <h4>{{pending.length}}</h4>
-                </div>
+          <div class="card-body">
+            <span><i class="fas fa-sync-alt"></i></span>
+            <div>
+              <h5>Pending Payments</h5>
+              <h4>{{ pending.length }}</h4>
             </div>
-            <div class="card-footer">
-                <a href="" routerLink="/dashboard/payments">View All</a>
-            </div>
+          </div>
+          <div class="card-footer">
+            <a href="" routerLink="/dashboard/payments">View All</a>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <section class="payments">
+      <section class="payments">
         <div class="activity-grid">
+          <div class="payment-card">
+            <h3>Recent Payments</h3>
 
-            <div class="payment-card">
-                <h3>Recent Payments</h3>
-
-                <div class="table-container uppercase">
-                    <table border="0" id="payments" #paymenttable>
-                        <thead>
-                            <tr>
-                                <th>Payment</th>
-                                <th>Amount</th>
-                                <th>Sent Date</th>
-                                <th>To</th>
-                                <th>From</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-    
-                            <tr *ngFor="let payment of transactions">
-                                <td>{{payment.method}} Payment</td>
-                                <td>£{{payment.amount}}</td>
-                                <td>{{payment.date}}</td>
-                                <td>{{payment.from}}</td>
-                                <td>{{payment.to}}</td>
-                                <td>
-                                    <span class="payment success">
-                                        {{payment.status}}
-                                    </span>
-                                </td>
-                            </tr>
-    
-                            
-                        </tbody>
-                    </table>
-                </div>
-
+            <div class="table-container uppercase">
+              <table border="0" id="payments" #paymenttable>
+                <thead>
+                  <tr>
+                    <th>Payment</th>
+                    <th>Amount</th>
+                    <th>Sent Date</th>
+                    <th>To</th>
+                    <th>From</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let payment of transactions">
+                    <td>{{ payment.method }} Payment</td>
+                    <td>£{{ payment.amount }}</td>
+                    <td>{{ payment.date }}</td>
+                    <td>{{ payment.from }}</td>
+                    <td>{{ payment.to }}</td>
+                    <td>
+                      <span class="payment success">
+                        {{ payment.status }}
+                      </span>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
+          </div>
 
-            <div class="information">
-                <div class="info-card">
-                    <div class="info-single">
-                        <span><i class="fas fa-user-friends"></i></span>
-                        <div>
-                            <h5>{{pending.length}}</h5>
-                            <small>Payments Pending</small>
-                        </div>
-                    </div>
-                    <div class="info-single">
-                        <span><i class="fas fa-sync-alt"></i></span>
-                        <div>
-                            <h5>{{sent.length}}</h5>
-                            <small>Payments Sent</small>
-                        </div>
-                    </div>
-                    <div class="info-single">
-                        <span><i class="fas fa-sync-alt"></i></span>
-                        <div>
-                            <h5>{{recieved.length}}</h5>
-                            <small>Payments Received</small>
-                        </div>
-                    </div>
+          <div class="information">
+            <div class="info-card">
+              <div class="info-single">
+                <span><i class="fas fa-user-friends"></i></span>
+                <div>
+                  <h5>{{ pending.length }}</h5>
+                  <small>Payments Pending</small>
                 </div>
-
-                <!-- <div class="info-card-two">
-                    <div class="info-flex">
-                        <div class="card-two-img"></div>
-                        <div class="info-card-two-content">
-                            <h5>{{user.email}}</h5>
-                            <small>Card Information</small>
-    
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        <button>
-                            Clear Payment
-                        </button>
-                    </div>
-
-                </div> -->
+              </div>
+              <div class="info-single">
+                <span><i class="fas fa-sync-alt"></i></span>
+                <div>
+                  <h5>{{ sent.length }}</h5>
+                  <small>Payments Sent</small>
+                </div>
+              </div>
+              <div class="info-single">
+                <span><i class="fas fa-sync-alt"></i></span>
+                <div>
+                  <h5>{{ recieved.length }}</h5>
+                  <small>Payments Received</small>
+                </div>
+              </div>
             </div>
-
+          </div>
         </div>
-
-    </section>
-
-</main>
-
-</div>
-
-
-
+      </section>
+    </main>
+  </div>
 </div>
