--- a/Frontend/easybank/src/app/components/login/login.component.html
+++ b/Frontend/easybank/src/app/components/login/login.component.html
@@ -1,5 +1,3 @@
-<!-- <p>login works!</p> -->
-
 <div class="login-sections">
     <div class="left">
         <section class="login-section">
@@ -8,8 +6,9 @@
 
         </section>
     </div>
-
+    <!-- Right Section of Login Page -->
     <div class="right">
+        <!-- Login Form -->
         <form class="loginform form-top" (ngSubmit)="onLoginButtonClick()" #loginform="ngForm">
             <section class="login-section">
                 <h2>Sign In</h2>
@@ -32,15 +31,6 @@
                 </button>
                 <mat-error *ngIf="formfield.invalid">{{getErrorMessage()}}</mat-error>
               </mat-form-field>
-            <!-- <div class="input-container name">
-                <label for="fname">Username</label>
-                <input id="fname" name="fname" type="text" ngModel>
-            </div>
-            <div class="input-container password">
-                <label for="password">Password</label>
-                <input id="password" name="password" type="password" ngModel>
-
-            </div> -->
 
             <button class="login-button" type="submit">Sign In</button>
         </form>
