--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.css
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.css
@@ -70,6 +70,8 @@ p {
 
 .side-logo {
   color: #fff;
+  font-size: 3.5rem;
+  letter-spacing: 1px;
 }
 
 .sidebar-menu {
@@ -85,10 +87,6 @@ p {
   font-size: 1.8rem;
   letter-spacing: 0.5px;
 }
-
-/* .sidebar li:first-child a {
-    background: rgba(0,0,0,0.7);
-} */
 
 .sidebar a span:first {
   color: var(--dashboard-text);
@@ -142,7 +140,7 @@ header {
   width: 38px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../../../assets/img/citybg.jpg);
+  background-image: url(../../../assets/img/user-icon.jpg);
   border-radius: 50%;
 }
 
@@ -167,6 +165,7 @@ main p {
 .title {
   margin-bottom: 1.2rem;
   font-weight: 500;
+  font-size: 2.5rem;
 }
 
 .cards-section {
@@ -177,8 +176,21 @@ main p {
 
 .card {
   background: var(--dashboard-card);
-  border-radius: 2px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+  /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); */
+  border: 1px solid #ccc;
+}
+
+.pink{
+    color:var(--dashboard-pink);
+}
+
+.green{
+    color:var(--dashboard-green);
+}
+
+.orange{
+    color:var(--dashboard-orange);
 }
 
 .card-body {
@@ -188,15 +200,16 @@ main p {
 }
 
 .card-body span {
-  font-size: 4rem;
+  font-size: 5rem;
   color: var(--dashboard-text);
   padding-right: 3rem;
+  /* text-shadow: 1px 2px rgba(0, 0, 0, 0.3); */
 }
 
 .card-body h5 {
   color: var(--dashboard-text);
   letter-spacing: 0.5px;
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 500;
 }
 
@@ -211,6 +224,7 @@ main p {
 
 .card-footer a {
   color: var(--dashboard-main);
+  font-size: 1.5rem;
 }
 
 .payments {
@@ -308,10 +322,11 @@ tbody tr:nth-child(even) {
   padding: 0.5rem 1rem;
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
 }
 .info-single span {
   font-size: 3rem;
-  color: var(--dashboard-text);
+  color: var(--dashboard-main);
   padding-right: 2rem;
 }
 
