--- a/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
@@ -36,7 +36,7 @@
         <li *ngIf="this.auth == true">
           <a href="" routerLink="/dashboard/admin">
             <span><i class="far fa-chart-bar"></i></span>
-            <span>Stats</span>
+            <span>Admin</span>
           </a>
         </li>
         <li>
