--- a/Frontend/easybank/src/app/components/home/home.component.html
+++ b/Frontend/easybank/src/app/components/home/home.component.html
@@ -87,11 +87,11 @@
           </div>
           <div class="consult-item">
             <i class="far fa-check-circle"></i>
-            <p>One of UK's leading digital banking solutions.</p>
+            <p>Robust and Effective Management Dashboard</p>
           </div>
           <div class="consult-item">
             <i class="far fa-check-circle"></i>
-            <p>One of UK's leading digital banking solutions.</p>
+            <p>Secure Storage and Transaction Services</p>
           </div>
         </div>
         <div class="consult-image" data-aos="fade-left">
